Initialize web application via create-cloudflare CLI
Details:
  C3 = create-cloudflare@2.42.0
  project name = d1-tutorial
  framework = astro
  framework cli = create-astro@4.11.0
  package manager = npm@10.9.2
  wrangler = wrangler@4.3.0
  git = 2.39.5

--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "d1-tutorial",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^4.2.1",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.0",
-    "astro": "^5.5.4"
-  }
+	"name": "d1-tutorial",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro build && wrangler dev",
+		"astro": "astro",
+		"deploy": "astro build && wrangler deploy",
+		"cf-typegen": "wrangler types"
+	},
+	"dependencies": {
+		"@astrojs/cloudflare": "^12.3.0",
+		"@astrojs/mdx": "^4.2.1",
+		"@astrojs/rss": "^4.0.11",
+		"@astrojs/sitemap": "^3.3.0",
+		"astro": "^5.5.4"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250320.0",
+		"wrangler": "^4.3.0"
+	}
 }
