--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,7 +16,14 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "gracedb",
+      "database_id": "3cc32617-8209-4853-a9bf-88c2306c4203"
+    }
+  ]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
